--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="647d63">  <td>23/07/26 21:14:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductValueTestCase.comparision()[pri:0, instance:TestCase.ProductValueTestCase@49e53c76]">comparision</td> 
-  <td>main@330739404</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>23/08/03 13:06:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductValueTestCase.comparision()[pri:0, instance:TestCase.ProductValueTestCase@6302bbb1]">comparision</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="bd6a61">  <td>23/08/03 13:06:11</td>   <td>-8557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowserandURL()[pri:0, instance:TestCase.ProductValueTestCase@6302bbb1]">&gt;&gt;launchBrowserandURL</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
 </table>
