--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f8c73">  <td>23/07/26 18:30:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductValueTestCase.comparision()[pri:0, instance:TestCase.ProductValueTestCase@31304f14]">comparision</td> 
-  <td>main@1886491834</td>   <td></td> </tr>
-<tr bgcolor="9f71a9">  <td>23/07/26 18:30:27</td>   <td>-6091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.verifyLogin()[pri:0, instance:TestCase.LoginTestCase@6302bbb1]">verifyLogin</td> 
-  <td>main@1886491834</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>23/07/26 18:30:19</td>   <td>-14265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTestCase.verifySignup()[pri:0, instance:TestCase.RegistrationTestCase@35d019a3]">verifySignup</td> 
-  <td>main@1886491834</td>   <td></td> </tr>
+<tr bgcolor="9f8c73">  <td>23/08/03 13:07:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductValueTestCase.comparision()[pri:0, instance:TestCase.ProductValueTestCase@43bc63a3]">comparision</td> 
+  <td>main@1603198149</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>23/08/03 13:06:58</td>   <td>-27226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowserandURL()[pri:0, instance:TestCase.LoginTestCase@77888435]">&gt;&gt;launchBrowserandURL</td> 
+<td>&nbsp;</td>  <td>main@1603198149</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>23/08/03 13:07:19</td>   <td>-6740</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowserandURL()[pri:0, instance:TestCase.ProductValueTestCase@43bc63a3]">&gt;&gt;launchBrowserandURL</td> 
+<td>&nbsp;</td>  <td>main@1603198149</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>23/08/03 13:06:58</td>   <td>-27226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowserandURL()[pri:0, instance:TestCase.LoginTestCase@77888435]">&gt;&gt;launchBrowserandURL</td> 
+<td>&nbsp;</td>  <td>main@1603198149</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>23/08/03 13:06:58</td>   <td>-27226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowserandURL()[pri:0, instance:TestCase.LoginTestCase@77888435]">&gt;&gt;launchBrowserandURL</td> 
+<td>&nbsp;</td>  <td>main@1603198149</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>23/08/03 13:07:04</td>   <td>-21406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowserandURL()[pri:0, instance:TestCase.RegistrationTestCase@38425407]">&gt;&gt;launchBrowserandURL</td> 
+<td>&nbsp;</td>  <td>main@1603198149</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>23/08/03 13:07:02</td>   <td>-23550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.verifyLogin(java.lang.String,java.lang.String)[pri:0, instance:TestCase.LoginTestCase@77888435]">verifyLogin</td> 
+  <td>main@1603198149</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>23/08/03 13:07:02</td>   <td>-23550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.verifyLogin(java.lang.String,java.lang.String)[pri:0, instance:TestCase.LoginTestCase@77888435]">verifyLogin</td> 
+  <td>main@1603198149</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>23/08/03 13:07:02</td>   <td>-23550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.verifyLogin(java.lang.String,java.lang.String)[pri:0, instance:TestCase.LoginTestCase@77888435]">verifyLogin</td> 
+  <td>main@1603198149</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/08/03 13:07:11</td>   <td>-14597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTestCase.verifySignup()[pri:0, instance:TestCase.RegistrationTestCase@38425407]">verifySignup</td> 
+  <td>main@1603198149</td>   <td></td> </tr>
 </table>
