--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyLogin</td>
+<td>Login</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -21,7 +21,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>launchBrowserandURL</td>
+<td>LaunchBrowserandUrl</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
@@ -37,7 +37,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySignup</td>
+<td>verifyRegister</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -47,7 +47,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>launchBrowserandURL</td>
+<td>LaunchBrowserandUrl</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
@@ -56,14 +56,14 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>TestCase.ProductValueTestCase</td>
+<td>TestCase.SearchTestCases</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>comparision</td>
+<td>Search</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -73,7 +73,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>launchBrowserandURL</td>
+<td>LaunchBrowserandUrl</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
