--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,24 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="647d63">  <td>23/08/03 13:07:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.verifyLogin(java.lang.String,java.lang.String)[pri:0, instance:TestCase.LoginTestCase@77888435]">verifyLogin</td> 
-  <td>main@1603198149</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>23/08/03 13:06:58</td>   <td>-3676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowserandURL()[pri:0, instance:TestCase.LoginTestCase@77888435]">&gt;&gt;launchBrowserandURL</td> 
-<td>&nbsp;</td>  <td>main@1603198149</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>23/08/03 13:07:19</td>   <td>16810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowserandURL()[pri:0, instance:TestCase.ProductValueTestCase@43bc63a3]">&gt;&gt;launchBrowserandURL</td> 
-<td>&nbsp;</td>  <td>main@1603198149</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>23/08/03 13:06:58</td>   <td>-3676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowserandURL()[pri:0, instance:TestCase.LoginTestCase@77888435]">&gt;&gt;launchBrowserandURL</td> 
-<td>&nbsp;</td>  <td>main@1603198149</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>23/08/03 13:07:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.verifyLogin(java.lang.String,java.lang.String)[pri:0, instance:TestCase.LoginTestCase@77888435]">verifyLogin</td> 
-  <td>main@1603198149</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>23/08/03 13:06:58</td>   <td>-3676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowserandURL()[pri:0, instance:TestCase.LoginTestCase@77888435]">&gt;&gt;launchBrowserandURL</td> 
-<td>&nbsp;</td>  <td>main@1603198149</td>   <td></td> </tr>
-<tr bgcolor="9f71a9">  <td>23/08/03 13:07:11</td>   <td>8953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTestCase.verifySignup()[pri:0, instance:TestCase.RegistrationTestCase@38425407]">verifySignup</td> 
-  <td>main@1603198149</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>23/08/03 13:07:04</td>   <td>2144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowserandURL()[pri:0, instance:TestCase.RegistrationTestCase@38425407]">&gt;&gt;launchBrowserandURL</td> 
-<td>&nbsp;</td>  <td>main@1603198149</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>23/08/03 13:07:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.verifyLogin(java.lang.String,java.lang.String)[pri:0, instance:TestCase.LoginTestCase@77888435]">verifyLogin</td> 
-  <td>main@1603198149</td>   <td></td> </tr>
-<tr bgcolor="9f8c73">  <td>23/08/03 13:07:25</td>   <td>23550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductValueTestCase.comparision()[pri:0, instance:TestCase.ProductValueTestCase@43bc63a3]">comparision</td> 
-  <td>main@1603198149</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>23/08/05 12:41:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchBrowserandUrl()[pri:0, instance:TestCase.SearchTestCases@62379589]">&gt;&gt;LaunchBrowserandUrl</td> 
+<td>&nbsp;</td>  <td>main@249034932</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>23/08/05 12:40:27</td>   <td>-45537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchBrowserandUrl()[pri:0, instance:TestCase.LoginTestCase@5c6648b0]">&gt;&gt;LaunchBrowserandUrl</td> 
+<td>&nbsp;</td>  <td>main@249034932</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>23/08/05 12:40:37</td>   <td>-36015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.Login()[pri:0, instance:TestCase.LoginTestCase@5c6648b0]">Login</td> 
+  <td>main@249034932</td>   <td></td> </tr>
+<tr bgcolor="a19691">  <td>23/08/05 12:40:38</td>   <td>-34341</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchBrowserandUrl()[pri:0, instance:TestCase.RegistrationTestCase@3754a4bf]">&gt;&gt;LaunchBrowserandUrl</td> 
+<td>&nbsp;</td>  <td>main@249034932</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/08/05 12:40:42</td>   <td>-30720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTestCase.verifyRegister()[pri:0, instance:TestCase.RegistrationTestCase@3754a4bf]">verifyRegister</td> 
+  <td>main@249034932</td>   <td></td> </tr>
+<tr bgcolor="9f8c73">  <td>23/08/05 12:41:16</td>   <td>3544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTestCases.Search()[pri:0, instance:TestCase.SearchTestCases@62379589]">Search</td> 
+  <td>main@249034932</td>   <td></td> </tr>
 </table>
